--- a/styles.css
+++ b/styles.css
@@ -63,12 +63,7 @@ p {
 }
 
 .main-section {
-  /* background-image: url("images/Nacht2.JPG");
-  background-attachment: fixed;
-  min-height: 95vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
+
   color: white;
   position: relative;
   z-index: 5;
@@ -88,16 +83,6 @@ p {
   font-size: 3rem;
 }
 
-/*
-blauw  #33367A
-geel #DFD83D
-groen #57963E
-paars #9E5795
-rood #C6304D
-teal #55AEC8
-oranje #DE742B
-donkerpaars: #3D3B8F
- */
 
 .section-light{
   /* background-color: #5C426A; */
@@ -107,13 +92,15 @@ donkerpaars: #3D3B8F
 }
 
 
+
+
 /* ----Media queries ---- */
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 600px) {
 
   /* For mobile phones: */
   .main-section{
     text-align: left;
-    min-height: 100%;
+    min-height: 60%;
   }
 
   .main-title {
@@ -121,9 +108,10 @@ donkerpaars: #3D3B8F
   }
 
   .span-container {
-    display: block;
-    position: absolute;
-    bottom: 0;
+    position: relative;
+     display: block;
+    text-align: left;
+    min-height: 40%;
   }
 
   .mobile-title{
@@ -137,7 +125,43 @@ donkerpaars: #3D3B8F
   }
 
   .mobile-span {
-    font-size: 4.5em;
+    /* font-size: 4.5em; */
+    color: #61B22F;
+    letter-spacing: 10px;
+  }
+
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+
+
+  .main-section{
+    text-align: left;
+    min-height: 60%;
+  }
+
+  .main-title {
+    display: none;
+  }
+
+  .span-container {
+    position: relative;
+   display: block;
+    text-align: left;
+    min-height: 40%;
+  }
+
+  .mobile-title{
+    font-size: 5em;
+    color: #15ACE1;
+  }
+
+  .mobile-title2{
+     font-size: 4.3em;
+    color: #15ACE1;
+  }
+
+  .mobile-span {
 
     color: #61B22F;
     letter-spacing: 10px;
