--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ donkerpaars: #3D3B8F
  */
 html {
   height: 100%;
+
 }
 
 body {
@@ -34,6 +35,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Gloria Hallelujah', cursive;
   color: white;
+  font-size: 3rem;
 }
 
 p {
@@ -68,29 +70,89 @@ p {
   position: relative;
   z-index: 5;
   text-align: center;
-    min-height: 90vh;
+    min-height: 95vh;
 }
 
 .sub-section {
   padding: 40px;
+  margin: 40px auto;
 }
 
 .sub-section p{
-  line-height: 2;
+  line-height: 1.75;
 }
 
-.subsection-heading{
-  font-size: 3rem;
+.quote{
+    line-height: 1.75;
+    text-align: center;
+}
+
+
+.section-light .subsection-heading{
+    color: #33367A;
 }
 
 
 .section-light{
-  /* background-color: #5C426A; */
-    background-image: url("images/light.png");
-      background-size: cover;
-      text-align: right;
+  background-color: #55AEC8;
+  color: #33367A;
 }
 
+.section-light p{
+  color: #33367A;
+}
+
+.button-boek{
+  text-align: center;
+}
+
+
+.btn-buy{
+  color: white;
+  background: #C6304D;
+  width: 300px;
+  height: 60px;
+  margin: 40px auto 20px;
+}
+
+.btn-buy:hover{
+  background: #9E5795;
+}
+
+.btn-paypal{
+  color: black;
+  background: #DFD83D;
+  width: 300px;
+  height: 60px;
+  margin: 40px auto 20px;
+}
+
+.btn-paypal:hover{
+  background: #9E5795;
+}
+
+
+.cause-text{
+  margin:  40px 0;
+}
+
+.logo-container{
+  text-align: right;
+}
+
+.section-purple{
+  background: #3D3B8F;
+}
+
+
+.payment{
+
+  margin-top: 130px;
+}
+
+.hidden{
+  display: none;
+}
 
 
 
@@ -173,5 +235,12 @@ p {
 @media only screen and (min-width: 768px) and (max-width: 1140px) {
   .main-title {
     font-size: 3.5em;
+  }
+}
+
+
+@media only screen and (max-width: 1140px) {
+  .subsection-heading, .quote{
+    font-size: 2.2em;
   }
 }
