--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,15 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 3rem;
 }
 
+a{
+  text-decoration: none;
+  color: #3D3B8F;
+}
+
+a:hover{
+  color: #9E5795;
+}
+
 p {
   color: white;
   font-size: 1.2em;
