--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ donkerpaars: #3D3B8F
  */
 html {
   height: 100%;
-
+  /* scroll-behavior: smooth; */
 }
 
 body {
@@ -55,6 +55,12 @@ p {
 
 .navigation-text {
   margin: 0 -30px;
+}
+
+.explain-text{
+  position: absolute;
+  width: 100%;
+  bottom: 5%;
 }
 
 .main-title {
@@ -113,6 +119,7 @@ p {
 
 .button-boek{
   text-align: center;
+
 }
 
 
@@ -122,10 +129,13 @@ p {
   width: 300px;
   height: 60px;
   margin: 40px auto 20px;
+  line-height: 30px;
+
 }
 
 .btn-buy:hover{
   background: #9E5795;
+    color: white;
 }
 
 .btn-paypal{
@@ -164,10 +174,43 @@ p {
 }
 
 
+.fa-volume-up{
+  padding: 70px;
+}
+
+
+.kleurplaat-tegel img{
+  max-width: 60%;
+  cursor: pointer;
+  padding: 40px;
+}
+
+.kleurplaat-tegel img:hover{
+  max-width: 70%;
+}
+
+
+.contact-section p, .contact-section form{
+  padding: 40px 60px;
+}
+
+
+footer{
+  color: white;
+}
+
+footer a{
+  color: white;
+}
+
+
 
 /* ----Media queries ---- */
 @media only screen and (max-width: 600px) {
 
+.explain-text{
+  display: none;
+}
   /* For mobile phones: */
   .main-section{
     text-align: left;
@@ -204,7 +247,9 @@ p {
 }
 
 @media only screen and (min-width: 600px) and (max-width: 768px) {
-
+  .explain-text{
+    display: none;
+  }
 
   .main-section{
     text-align: left;
