--- a/image-styles.css
+++ b/image-styles.css
@@ -168,16 +168,13 @@ transform: scaleX(-1);
 }
 
 .plaatje-boek {
-  margin: -80px auto -15px;
-
-
-  max-width: 90%;
+  max-width: 80%;
+   transform: rotate(-5deg);
 }
 
 
 .logo{
   max-height: 120px;
-  /* border: 1px solid grey; */
   margin: 40px;
 }
 
